# clawhub-pro-fastapi-generator

./: BUILD_PLAN.md  CUSTOMER_DELIVERY.md  DEMO_SCRIPT.md  GUMROAD_SETUP.md  LAUNCH_POSTS.md  PROGRESS.md  README.md  STATUS.md
generators/fastapi-pro-generator/: SKILL.md
generators/fastapi-pro-generator/assets/template/base/: .env.example  .gitignore
generators/fastapi-pro-generator/assets/template/base/src/app/: __init__.py  config.py  main.py
generators/fastapi-pro-generator/assets/template/base/src/app/core/: security.py
generators/fastapi-pro-generator/assets/template/features/auth/src/app/: config.py
generators/fastapi-pro-generator/assets/template/features/auth/src/app/features/auth/: router.py
generators/fastapi-pro-generator/scripts/: generate.py
test-output/my-saas-backend/: .env.example  Dockerfile  README.md  pyproject.toml
test-output/my-saas-backend/.github/workflows/: ci.yml
test-output/my-saas-backend/src/app/: __init__.py  config.py  main.py
test-output/my-saas-backend/src/app/features/auth/: __init__.py
test-output/my-saas-backend/src/app/features/health/: __init__.py  router.py
test-output/my-saas-backend/tests/: conftest.py  test_health.py
website/: index.html
